SVC for zeros and ones

--- a/src/lab_02_object_description.ipynb
+++ b/src/lab_02_object_description.ipynb
@@ -156,7 +156,7 @@
     "def find_contour(img, opencv_version):\n",
     "    \"\"\" Finds and returns the contour of the image\"\"\"\n",
     "    contour = []\n",
-    "    if int(opencv_version) >= 3:\n",
+    "    if int(opencv_version) == 3:\n",
     "        _, contour, _ = cv2.findContours(img, mode = cv2.RETR_TREE, method = cv2.CHAIN_APPROX_NONE)\n",
     "    else:\n",
     "        contour, _ = cv2.findContours(img.copy(), mode = cv2.RETR_TREE, method = cv2.CHAIN_APPROX_NONE)\n",
@@ -190,15 +190,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opencv_version, _, _ = cv2.__version__.split(\".\")"
+    "opencv_version, opencv_version_minor, _ = cv2.__version__.split(\".\")\n",
+    "print('OpenCV Version: {}.{}'.format(opencv_version, opencv_version_minor))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "zero_contours = []\n",
@@ -258,6 +257,55 @@
     "\n",
     "plt.scatter(np.asarray(zeros_coeff)[:,0], np.asarray(zeros_coeff)[:,1], color='red', label='zeros descriptors')\n",
     "plt.scatter(np.asarray(ones_coeff)[:,0], np.asarray(ones_coeff)[:,1], color='blue', label='ones descriptors')   \n",
+    "plt.xlabel(\"Fourrier coefficient 1\")\n",
+    "plt.ylabel(\"Fourrier coefficient 2\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classification\n",
+    "To classify zeros and ones, we will use SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the training dataset from the two fourrier coefficients\n",
+    "x_train = np.concatenate((zeros_coeff, ones_coeff), axis=0)\n",
+    "y_train = np.concatenate((np.zeros(len(zeros_coeff)), np.ones(len(ones_coeff))), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train\n",
+    "from sklearn.svm import SVC\n",
+    "classifier = SVC(kernel='linear')\n",
+    "classifier.fit(x_train, y_train)\n",
+    "supports = classifier.support_vectors_\n",
+    "\n",
+    "#compute classification line\n",
+    "w = classifier.coef_[0]\n",
+    "a = -w[0] / w[1]\n",
+    "xx = np.linspace(75,125)\n",
+    "yy = a * xx - classifier.intercept_[0] / w[1]\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize = (15,9))\n",
+    "plt.scatter(np.asarray(zeros_coeff)[:,0], np.asarray(zeros_coeff)[:,1], color='red', label='zeros descriptors')\n",
+    "plt.scatter(np.asarray(ones_coeff)[:,0], np.asarray(ones_coeff)[:,1], color='blue', label='ones descriptors')   \n",
+    "plt.scatter(supports[:,0], supports[:,1], marker=\"$\\u25EF$\",linewidth='2', s=200, edgecolors='green', label='Support Vectors')\n",
+    "plt.plot(xx, yy, 'k-', label=\"Non weighted classification Line\")\n",
     "plt.xlabel(\"Fourrier coefficient 1\")\n",
     "plt.ylabel(\"Fourrier coefficient 2\")\n",
     "plt.legend()\n",
@@ -667,5 +715,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
