--- a/src/lab_02_object_description.ipynb
+++ b/src/lab_02_object_description.ipynb
@@ -36,8 +36,13 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from mlxtend.plotting import plot_decision_regions\n",
     "import wagner_fisher as wf\n",
+    "import warnings\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\",category=plt.cbook.mplDeprecation)\n",
+    "\n",
     "\n",
     "data_base_path = os.path.join(os.pardir, 'data')\n",
     "data_folder = 'lab-02-data'\n",
@@ -279,7 +284,7 @@
    "source": [
     "# create the training dataset from the two fourrier coefficients\n",
     "x_train = np.concatenate((zeros_coeff, ones_coeff), axis=0)\n",
-    "y_train = np.concatenate((np.zeros(len(zeros_coeff)), np.ones(len(ones_coeff))), axis=0)"
+    "y_train = np.concatenate((np.zeros(len(zeros_coeff), dtype=int), np.ones(len(ones_coeff), dtype=int)), axis=0)"
    ]
   },
   {
@@ -294,18 +299,9 @@
     "classifier.fit(x_train, y_train)\n",
     "supports = classifier.support_vectors_\n",
     "\n",
-    "#compute classification line\n",
-    "w = classifier.coef_[0]\n",
-    "a = -w[0] / w[1]\n",
-    "xx = np.linspace(75,125)\n",
-    "yy = a * xx - classifier.intercept_[0] / w[1]\n",
-    "\n",
-    "\n",
-    "plt.figure(figsize = (15,9))\n",
-    "plt.scatter(np.asarray(zeros_coeff)[:,0], np.asarray(zeros_coeff)[:,1], color='red', label='zeros descriptors')\n",
-    "plt.scatter(np.asarray(ones_coeff)[:,0], np.asarray(ones_coeff)[:,1], color='blue', label='ones descriptors')   \n",
-    "plt.scatter(supports[:,0], supports[:,1], marker=\"$\\u25EF$\",linewidth='2', s=200, edgecolors='green', label='Support Vectors')\n",
-    "plt.plot(xx, yy, 'k-', label=\"Non weighted classification Line\")\n",
+    "plt.figure(figsize=(12,8))\n",
+    "plt.scatter(supports[:,0], supports[:,1], marker=\"$\\u25EF$\",linewidth='1', s=200, edgecolors='green', label='Support Vectors')\n",
+    "plot_decision_regions(x_train, y_train, clf=classifier, legend=2)\n",
     "plt.xlabel(\"Fourrier coefficient 1\")\n",
     "plt.ylabel(\"Fourrier coefficient 2\")\n",
     "plt.legend()\n",
@@ -655,12 +651,15 @@
     "twos_coeff = []\n",
     "threes_coeff = []\n",
     "\n",
+    "MIN_COEFF = 4\n",
+    "MAX_COEFF = nb_coeff+MIN_COEFF\n",
+    "\n",
     "for zero_descriptor, one_descriptor, two_descriptor, three_descriptor \\\n",
     "    in zip(zero_descriptors, one_descriptors, two_descriptors, three_descriptors):\n",
-    "    zeros_coeff.append(np.absolute(zero_descriptor[1:nb_coeff+1]))\n",
-    "    ones_coeff.append(np.absolute(one_descriptor[1:nb_coeff+1]))\n",
-    "    twos_coeff.append(np.absolute(two_descriptor[1:nb_coeff+1]))\n",
-    "    threes_coeff.append(np.absolute(three_descriptor[1:nb_coeff+1]))\n",
+    "    zeros_coeff.append(np.absolute(zero_descriptor[MIN_COEFF : MAX_COEFF]))\n",
+    "    ones_coeff.append(np.absolute(one_descriptor[MIN_COEFF : MAX_COEFF]))\n",
+    "    twos_coeff.append(np.absolute(two_descriptor[MIN_COEFF : MAX_COEFF]))\n",
+    "    threes_coeff.append(np.absolute(three_descriptor[MIN_COEFF : MAX_COEFF]))\n",
     "\n",
     "plt.scatter(np.asarray(zeros_coeff)[:,0], np.asarray(zeros_coeff)[:,1], color='red', label='zeros descriptors')\n",
     "plt.scatter(np.asarray(ones_coeff)[:,0], np.asarray(ones_coeff)[:,1], color='blue', label='ones descriptors') \n",
@@ -677,6 +676,112 @@
    "metadata": {},
    "source": [
     "**Blablabla** as we can see on peu pas vraiment différencier, we need more dimension maybe "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVC multiclass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the training dataset from the two fourrier coefficients\n",
+    "x_train = np.concatenate((zeros_coeff, ones_coeff, twos_coeff, threes_coeff), axis=0)\n",
+    "y_train = np.concatenate((np.zeros(len(zeros_coeff), dtype=int), np.ones(len(ones_coeff), dtype=int),np.ones(len(zeros_coeff), dtype=int)*2,np.ones(len(zeros_coeff),dtype=int)*3), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the parameter grid based on the results of random search \n",
+    "params_grid = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4],\n",
+    "                     'C': [1, 10, 100, 1000]},\n",
+    "                    {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]\n",
+    "\n",
+    "model = GridSearchCV(SVC(), params_grid, cv=5)\n",
+    "model.fit(x_train, y_train)\n",
+    "print('Best score for training data: {}'.format(model.best_score_))\n",
+    "print('Best C: {}'.format(model.best_estimator_.C))\n",
+    "print('Best Kernel {}:'.format(model.best_estimator_.kernel))\n",
+    "print('Best Gamma: {}'.format(model.best_estimator_.gamma))\n",
+    "final_model = model.best_estimator_\n",
+    "print(\"Training set score for SVM: %f\" % final_model.score(x_train , y_train))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,8))\n",
+    "plot_decision_regions(x_train, y_train, clf=final_model, legend=2)\n",
+    "plt.xlabel(\"Fourrier coefficient 1\")\n",
+    "plt.ylabel(\"Fourrier coefficient 2\")\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which Descriptor is used have been determined experimentally by looking how well the data then fitted in the region. We obtained 95% fit with the descriptors indexes 4 and 5."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### SVC classification improvement\n",
+    "If we want to improve the classification, we need to use 3 descriptors. We can see the result below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_coeff = 3\n",
+    "\n",
+    "for i in range(8):\n",
+    "    MIN_COEFF = i\n",
+    "    MAX_COEFF = nb_coeff+MIN_COEFF\n",
+    "    zeros_coeff = []\n",
+    "    ones_coeff = []\n",
+    "    twos_coeff = []\n",
+    "    threes_coeff = []\n",
+    "    for zero_descriptor, one_descriptor, two_descriptor, three_descriptor \\\n",
+    "        in zip(zero_descriptors, one_descriptors, two_descriptors, three_descriptors):\n",
+    "        zeros_coeff.append(np.absolute(zero_descriptor[MIN_COEFF : MAX_COEFF]))\n",
+    "        ones_coeff.append(np.absolute(one_descriptor[MIN_COEFF : MAX_COEFF]))\n",
+    "        twos_coeff.append(np.absolute(two_descriptor[MIN_COEFF : MAX_COEFF]))\n",
+    "        threes_coeff.append(np.absolute(three_descriptor[MIN_COEFF : MAX_COEFF]))\n",
+    "\n",
+    "    # create the training dataset from the two fourrier coefficients\n",
+    "    x_train = np.concatenate((zeros_coeff, ones_coeff, twos_coeff, threes_coeff), axis=0)\n",
+    "    y_train = np.concatenate((np.zeros(len(zeros_coeff), dtype=int), np.ones(len(ones_coeff), dtype=int),np.ones(len(zeros_coeff), dtype=int)*2,np.ones(len(zeros_coeff),dtype=int)*3), axis=0)\n",
+    "\n",
+    "    # Create the parameter grid based on the results of random search \n",
+    "    params_grid = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4],\n",
+    "                         'C': [1, 10, 100, 1000]},\n",
+    "                        {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]\n",
+    "\n",
+    "    model = GridSearchCV(SVC(), params_grid, cv=5)\n",
+    "    model.fit(x_train, y_train)\n",
+    "    final_model = model.best_estimator_\n",
+    "    print(\"Training set score for SVM with descriptors range {:d}-{:d} : {:2f}\".format(MIN_COEFF, MAX_COEFF-1, final_model.score(x_train , y_train)))\n",
+    "\n"
    ]
   },
   {
