--- a/src/lab_02_object_description.ipynb
+++ b/src/lab_02_object_description.ipynb
@@ -628,7 +628,9 @@
     "                    angle_final = angle\n",
     "                \n",
     "    translation_matrix = np.float32([[1,0,x_final], [0,1,y_final]])\n",
+    "    #Rotation matrix seems not to work\n",
     "    rotation_matrix = cv2.getRotationMatrix2D(center, angle_final, scale)\n",
+    "    # don't know if translation * rotation gives the good result\n",
     "    img_translation = cv2.warpAffine(zeros_thresholded[i], translation_matrix * rotation_matrix, (width, height))\n",
     "    print('Image {}: minimum distance = {:.02f} for a translation of ({}, {}) and an angle = {:.02f}°.'.format(i, dist_final, x_final, y_final, angle_final))\n",
     "    ax[i].axis('off')\n",
@@ -658,7 +660,7 @@
     "            \n",
     "            cnt_translation = contour_translation(one_contours[i], trans_x, trans_y)\n",
     "            \n",
-    "            for angle in np.arange(0, 360, 180):\n",
+    "            for angle in np.arange(0, 360, 15):\n",
     "                \n",
     "                cnt_rotation = contour_rotation(cnt_translation, angle, center)\n",
     "                dist2 = compute_dist(cnt_translation, one_dist_map)\n",
@@ -666,10 +668,12 @@
     "                    dist_final = dist2\n",
     "                    x_final = trans_x\n",
     "                    y_final = trans_y\n",
-    "                    angle_final = angle + 90\n",
+    "                    angle_final = angle\n",
     "                \n",
     "    translation_matrix = np.float32([[1, 0, x_final], [0, 1, y_final]])\n",
-    "    rotation_matrix = cv2.getRotationMatrix2D(center, angle_final*np.pi/180, scale)\n",
+    "    #Rotation matrix seems not to work\n",
+    "    rotation_matrix = cv2.getRotationMatrix2D(center, angle_final, scale)\n",
+    "    # don't know if translation * rotation gives the good result\n",
     "    img_translation = cv2.warpAffine(ones_thresholded[i], translation_matrix * rotation_matrix, (width, height))\n",
     "    print('Image {}: minimum distance = {:.02f} for a translation of ({}, {}) and an angle = {:.02f}°.'.format(i, dist_final, x_final, y_final, angle_final))\n",
     "    ax[i].axis('off')\n",
