--- a/src/lab_03_classification.ipynb
+++ b/src/lab_03_classification.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# [IAPR 2020:][iapr2020] Lab 3 ‒  Classification\n",
     "\n",
-    "**Author:** Sven Borden, Sorya Jullien, Artur Jesslen\n",
+    "**Authors:** Sven Borden, Sorya Jullien, Artur Jesslen  \n",
+    "**Due date:** 03.05.2020\n",
     "\n",
-    "**Due date:** 03.05.2020"
+    "[iapr2020]: https://github.com/LTS5/iapr-2020"
    ]
   },
   {
@@ -84,17 +85,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_colors = ['#FF0000', '#00FF00', '#0000FF'] #used later for plotting colors"
+    "class_colors = ['red', 'green', 'blue'] #used later for plotting colors"
    ]
   },
   {
@@ -126,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, we can tell that the distributions for each class is reasonably gaussian. We also can see than each class is balanced in the number of samples. To quantify how much data are similar to gaussian distribution, we will evaluate their Skewness an Kurtosis. From this quick view, we can observe tha for classes `a` and `b` the covatiance matrix is similar, which is not the case with class `c`"
+    "As we can see, we can tell that the distributions for each class is reasonably gaussian. We also can see than each class is balanced in the number of samples. To quantify how much data are similar to gaussian distribution, we will evaluate their Skewness an Kurtosis. From this quick view, we can observe that for classes `a` and `b` the covatiance matrix is similar, which is not the case with class `c`"
    ]
   },
   {
@@ -205,10 +201,10 @@
     "def get_coefficient(data):\n",
     "    temp_mean = data.mean(axis=0)\n",
     "\n",
-    "    temp_len=len(data)\n",
-    "    temp_sig=(np.dot((data-temp_mean).T, data-temp_mean)/temp_len)\n",
+    "    temp_len = len(data)\n",
+    "    temp_sig = (np.dot((data-temp_mean).T, data-temp_mean)/temp_len)\n",
     "    # in the end we round the parameters to the closest integer\n",
-    "    return temp_mean.round(),temp_sig.round()"
+    "    return temp_mean.round(), temp_sig.round()"
    ]
   },
   {
@@ -222,10 +218,10 @@
     "sigs = []\n",
     "i = 0\n",
     "for label, cl in zip(['a','b','c'], [a,b,c]):\n",
-    "    mean,sig=get_coefficient(a)\n",
-    "    \n",
+    "    mean, sig = get_coefficient(cl)\n",
     "    means.append(mean)\n",
     "    sigs.append(sig)\n",
+    "    \n",
     "    print('mean for {} : {}'.format(label, mean))\n",
     "    print('covariance matrix for {} :\\n {}\\n'.format(label, sig))"
    ]
@@ -309,10 +305,10 @@
     "    x, y = separateXY(cl)\n",
     "    ax.scatter(x, y, label=label_, color=color_)\n",
     "    \n",
-    "for label_, con, color_ in zip(['AB', 'AC', 'BC'], [curve_ab, curve_ac, curve_bc], ['#000000','#000000','#000000']):\n",
+    "for label_, con, color_ in zip(['AB', 'AC', 'BC'], [curve_ab, curve_ac, curve_bc], ['black','black','black']):\n",
     "    contour_item = ax.contour(x_range, y_range, con, 0, linestyles='dashed', colors=color_)\n",
     "    contour_item.levels = [label_ for val in contour_item.levels]\n",
-    "    ax.clabel(contour_item, contour_item.levels, inline=True, fontsize=20, colors='#000000')\n",
+    "    ax.clabel(contour_item, contour_item.levels, inline=True, fontsize=20, colors='black')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -324,7 +320,7 @@
     "### 1.2 Mahalanobis distance\n",
     "For classes `a` and `b`, give the expression of the Mahalanobis distance used to classify a point in class `a` or `b`, and verify the obtained classification, in comparison with the \"complete\" Bayes classification, for a few points of the plane.\n",
     "\n",
-    "According to the Bayasian classification for normal laws, if the covariance matrix $\\Sigma$ is not diagoal, the most probable class is the one which minimizes the Mahalanobis distance.\n",
+    "According to the Bayesian classification for normal laws, if the covariance matrix $\\Sigma$ is not diagoal, the most probable class is the one which minimizes the Mahalanobis distance.\n",
     "\n",
     "Mahalanobis Distance:\n",
     "\n",
@@ -357,8 +353,8 @@
     "# calculate mahalanobis distance of a data point from a dataset according to the equation above\n",
     "def get_mahalarnobis_distance(data, new_point):\n",
     "    mean , sig = get_coefficient(data)\n",
-    "    inv_sig=np.linalg.inv(sig)\n",
-    "    d_m=np.sqrt(np.sqrt((new_point-mean).dot(inv_sig).dot((new_point-mean).T)))\n",
+    "    inv_sig = np.linalg.inv(sig)\n",
+    "    d_m = np.sqrt((new_point - mean).dot(inv_sig).dot((new_point - mean).T))\n",
     "    return d_m"
    ]
   },
@@ -372,10 +368,10 @@
     "# input: dataset and label\n",
     "# output: classification accuracy, list of data points that are correctly classified and list of data points that are wrongly classified\n",
     "def mahalarnobis_distance_performance(new_data, label):\n",
-    "    total_num=len(new_data)\n",
-    "    correct_num=0\n",
-    "    correct_list=[]\n",
-    "    wrong_list=[]\n",
+    "    total_num = len(new_data)\n",
+    "    correct_num = 0\n",
+    "    correct_list = []\n",
+    "    wrong_list = []\n",
     "    \n",
     "    for data_ in new_data:\n",
     "        temp_dm_a = get_mahalarnobis_distance(a, data_)\n",
@@ -385,9 +381,9 @@
     "        prediction = np.argmin([temp_dm_a, temp_dm_b], axis = 0)\n",
     "        if prediction == label:\n",
     "            correct_num += 1\n",
-    "            correct_list += [data_]\n",
+    "            correct_list.append(data_)\n",
     "        else:\n",
-    "            wrong_list += [data_]\n",
+    "            wrong_list.append(data_)\n",
     "            \n",
     "    accuracy=correct_num/total_num\n",
     "    \n",
@@ -429,11 +425,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy_a_mah, a_correct_list_mah, a_wrong_list_mah = mahalarnobis_distance_performance(a,0)\n",
-    "accuracy_b_mah, b_correct_list_mah, b_wrong_list_mah = mahalarnobis_distance_performance(b,1)\n",
+    "accuracy_a_mah, a_correct_list_mah, a_wrong_list_mah = mahalarnobis_distance_performance(a, 0)\n",
+    "accuracy_b_mah, b_correct_list_mah, b_wrong_list_mah = mahalarnobis_distance_performance(b, 1)\n",
     "\n",
-    "accuracy_a_bayes, a_correct_list_bayes, a_wrong_list_bayes = complete_bayesian_performance(a,0)\n",
-    "accuracy_b_bayes, b_correct_list_bayes, b_wrong_list_bayes = complete_bayesian_performance(b,1)"
+    "accuracy_a_bayes, a_correct_list_bayes, a_wrong_list_bayes = complete_bayesian_performance(a, 0)\n",
+    "accuracy_b_bayes, b_correct_list_bayes, b_wrong_list_bayes = complete_bayesian_performance(b, 1)"
    ]
   },
   {
@@ -460,9 +456,9 @@
     "ax[1].scatter(a_wrong_list_bayes[:, 0], a_wrong_list_bayes[:, 1], label = 'prediction:b,  ground truth:a')\n",
     "ax[1].scatter(b_correct_list_bayes[:, 0], b_correct_list_bayes[:, 1], label = 'correctly classified b')\n",
     "ax[1].scatter(b_wrong_list_bayes[:, 0], b_wrong_list_bayes[:, 1], label = 'prediction:a,  ground truth:b')\n",
-    "contour_item = ax[1].contour(x_range, y_range, curve_ab, 0,linestyles='dotted', colors=['#000000'])\n",
+    "contour_item = ax[1].contour(x_range, y_range, curve_ab, 0,linestyles='dotted', colors='black')\n",
     "contour_item.levels = [' AB Separation' for val in contour_item.levels]\n",
-    "ax[1].clabel(contour_item, contour_item.levels, inline=True, fontsize=10, colors='#000000')\n",
+    "ax[1].clabel(contour_item, contour_item.levels, inline=True, fontsize=10, colors='black')\n",
     "ax[1].set_title(\"Classification Performance by Bayes Method\")\n",
     "\n",
     "ax[0].legend()\n",
@@ -477,21 +473,21 @@
    "outputs": [],
    "source": [
     "print('By Bayes Method')\n",
-    "print('Accuracy for a data set = {}'.format(accracy_a_bayes))\n",
-    "print('Accuracy for b data set = {}'.format(accracy_b_bayes))\n",
-    "print('Accuracy for all data in a and b data sets = {:2f}'.format(0.5*(accracy_a_bayes+accracy_b_bayes)))\n",
+    "print('Accuracy for a data set = {}'.format(accuracy_a_bayes))\n",
+    "print('Accuracy for b data set = {}'.format(accuracy_b_bayes))\n",
+    "print('Accuracy for all data in a and b data sets = {:2f}'.format(0.5 * (accuracy_a_bayes + accuracy_b_bayes)))\n",
     "print('-----------------------------------------------------------------')\n",
     "print('By Mahalanobis Distance')\n",
-    "print('Accuracy for a data set = {}'.format(accracy_a_mah))\n",
-    "print('Accuracy for b data set = {}'.format(accracy_b_mah))\n",
-    "print('Accuracy for all data in a and b data sets = {:2f}'.format(0.5*(accracy_a_mah+accracy_b_mah)))"
+    "print('Accuracy for a data set = {}'.format(accuracy_a_mah))\n",
+    "print('Accuracy for b data set = {}'.format(accuracy_b_mah))\n",
+    "print('Accuracy for all data in a and b data sets = {:2f}'.format(0.5 * (accuracy_a_mah + accuracy_b_mah)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the Beyasian classification for normal laws, if the covariance matrix $\\Sigma$ is not diagoal, the most probable class is the one which minimizes the Mahalanobis distance.\n",
+    "According to the Bayasian classification for normal laws, if the covariance matrix $\\Sigma$ is not diagoal, the most probable class is the one which minimizes the Mahalanobis distance.\n",
     "\n",
     "The plots of classification and numerical accuracy show that mahalanobis distance and complete Bayesian classifier share the same result and performance in this case, which proves the theoretical hypothesis, along with the same prior probabilities of a and b."
    ]
@@ -600,13 +596,13 @@
     "test_images_path = os.path.join(data_part2_folder, 't10k-images-idx3-ubyte.gz')\n",
     "test_labels_path = os.path.join(data_part2_folder, 't10k-labels-idx1-ubyte.gz')\n",
     "\n",
-    "train_images = extract_data(train_images_path, image_shape, train_set_size)\n",
-    "test_images = extract_data(test_images_path, image_shape, test_set_size)\n",
-    "train_labels = extract_labels(train_labels_path, train_set_size)\n",
-    "test_labels = extract_labels(test_labels_path, test_set_size)\n",
+    "train_images_extract = extract_data(train_images_path, image_shape, train_set_size)\n",
+    "test_images_extract = extract_data(test_images_path, image_shape, test_set_size)\n",
+    "train_labels_extract = extract_labels(train_labels_path, train_set_size)\n",
+    "test_labels_extract = extract_labels(test_labels_path, test_set_size)\n",
     "\n",
-    "print(\"Training Set \", train_images.shape, train_labels.shape)\n",
-    "print(\"Test Set\", test_images.shape, test_labels.shape)"
+    "print(\"Training Set \", train_images_extract.shape, train_labels_extract.shape)\n",
+    "print(\"Test Set\", test_images_extract.shape, test_labels_extract.shape)"
    ]
   },
   {
@@ -633,7 +629,7 @@
    "source": [
     "image_size = 28\n",
     "\n",
-    "def plot_images(images, cls_true, cls_pred=None):\n",
+    "def plot_images(images, cls_true, cls_pred = None):\n",
     "    assert len(images) == len(cls_true) == 9\n",
     "    \n",
     "    # Create figure with 3x3 sub-plots.\n",
@@ -661,13 +657,14 @@
     "    plt.show()\n",
     "\n",
     "# Get the first images from the test-set.\n",
-    "images = test_images[0:9]\n",
+    "images = test_images_extract[0:9]\n",
     "\n",
     "# Get the true classes for those images.\n",
-    "cls_true = test_labels[0:9]\n",
+    "cls_true = test_labels_extract[0:9]\n",
+    "\n",
     "\n",
     "# Plot the images and labels using our helper-function above.\n",
-    "plot_images(images=images, cls_true=cls_true)"
+    "plot_images(images=images, cls_true = cls_true)"
    ]
   },
   {
@@ -701,8 +698,8 @@
     "\n",
     "num_labels = 10\n",
     "\n",
-    "train_images, train_labels = reformat(train_images, train_labels)\n",
-    "test_images, test_labels = reformat(test_images, test_labels)\n",
+    "train_images, train_labels = reformat(train_images_extract, train_labels_extract)\n",
+    "test_images, test_labels = reformat(test_images_extract, test_labels_extract)\n",
     "\n",
     "# Display the files\n",
     "print(\"Training Set - shape: \", train_images.shape, train_labels.shape)\n",
@@ -808,7 +805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_size_flat=image_size * image_size\n",
+    "image_size_flat = image_size * image_size\n",
     "\n",
     "# Create a new graph\n",
     "GRAPH = tf.Graph()\n",
@@ -817,8 +814,8 @@
     "with GRAPH.as_default():\n",
     "    \n",
     "    # Define placeholders\n",
-    "    TF_TRAIN_DATASET = tf.placeholder(tf.float32, shape=(None, image_size * image_size))\n",
-    "    TF_TRAIN_LABELS = tf.placeholder(tf.float32, shape=(None, num_labels))\n",
+    "    TF_TRAIN_DATASET = tf.placeholder(tf.float32, shape = (None, image_size * image_size))\n",
+    "    TF_TRAIN_LABELS = tf.placeholder(tf.float32, shape = (None, num_labels))\n",
     "    TF_TEST_DATASET = tf.constant(test_images)\n",
     "    \n",
     "    with tf.name_scope(\"Linear_model\"):\n",
@@ -845,10 +842,10 @@
     "        \"\"\"\n",
     "           Cost-function\n",
     "        \"\"\"\n",
-    "        CROSS_ENTROPY= tf.nn.softmax_cross_entropy_with_logits(logits=TRAIN_LOGITS, labels=TF_TRAIN_LABELS)\n",
-    "        COST= tf.reduce_mean(CROSS_ENTROPY)\n",
+    "        CROSS_ENTROPY = tf.nn.softmax_cross_entropy_with_logits_v2(logits = TRAIN_LOGITS, labels = TF_TRAIN_LABELS)\n",
+    "        COST = tf.reduce_mean(CROSS_ENTROPY)\n",
     "        # Optimizer\n",
-    "        OPTIMIZER = tf.train.GradientDescentOptimizer(learning_rate=0.5).minimize(COST)"
+    "        OPTIMIZER = tf.train.GradientDescentOptimizer(learning_rate = 0.5).minimize(COST)"
    ]
   },
   {
@@ -905,12 +902,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "with tf.Session(graph=GRAPH) as session:\n",
+    "with tf.Session(graph = GRAPH) as session:\n",
     "    \"\"\"\n",
     "        Start the above variable initialization\n",
     "    \"\"\"\n",
-    "    tf.initialize_all_variables().run()\n",
-    "    print(\"Variables initialized\")\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    # v1: tf.initialize_all_variables().run()\n",
     "\n",
     "    for step in range(num_iterations):\n",
     "        \"\"\"\n",
@@ -922,15 +919,13 @@
     "        \"\"\"\n",
     "            Feed the current session with batch data\n",
     "        \"\"\"\n",
-    "        FEED_DICT = {TF_TRAIN_DATASET: BATCH_DATA, TF_TRAIN_LABELS: BATCH_LABELS}\n",
-    "        _, l, predictions = session.run([OPTIMIZER, COST, TRAIN_PREDICTION], feed_dict=FEED_DICT)\n",
+    "        FEED_DICT = {TF_TRAIN_DATASET:BATCH_DATA, TF_TRAIN_LABELS:BATCH_LABELS}\n",
+    "        _, l, predictions = session.run([OPTIMIZER, COST, TRAIN_PREDICTION], feed_dict = FEED_DICT)\n",
     "\n",
     "        if(step % 500 == 0):\n",
-    "            print(\"Minibatch loss at step \", step, \": \", l)\n",
-    "            print(\"Minibatch accuracy: \", accuracy(predictions, BATCH_LABELS))\n",
-    "            \n",
-    "        if (step == num_iterations-1):\n",
-    "            print(\"Test accuracy: \", accuracy(TEST_PREDICTION.eval(), test_labels))"
+    "            print(\"Step {}:\\nLoss: {:.02f}\\nTrain accuracy: {:.02f} %\\nTest accuracy: {:.02f} %\"\\\n",
+    "                  .format(step, l, accuracy(predictions, BATCH_LABELS), accuracy(TEST_PREDICTION.eval(), test_labels)))\n",
+    "            print(\"----------------------\")"
    ]
   },
   {
@@ -1024,7 +1019,8 @@
     "        TRAIN_LOGITS = tf.matmul(TRAIN_HIDDEN_LOGITS_2, WEIGHTS) + BIASES\n",
     "        TEST_LOGITS = tf.matmul(TEST_HIDDEN_LOGITS_2, WEIGHTS) + BIASES\n",
     "\n",
-    "        LOSS = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=TRAIN_LOGITS, labels=TF_TRAIN_LABELS))\n",
+    "        LOSS = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=TRAIN_LOGITS, labels=TF_TRAIN_LABELS))\n",
+    "        # v1: LOSS = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=TRAIN_LOGITS, labels=TF_TRAIN_LABELS))\n",
     "\n",
     "        OPTIMIZER = tf.train.GradientDescentOptimizer(0.0005).minimize(LOSS)\n",
     "        tf.add_to_collection(\"activation\", TRAIN_LOGITS)\n",
@@ -1050,13 +1046,12 @@
    "source": [
     "def optimize(num_iterations, num_samples):\n",
     "    \n",
-    "    with tf.Session(graph=MLP_GRAPH) as session:\n",
-    "\n",
+    "    with tf.Session(graph = MLP_GRAPH) as session:\n",
     "        \"\"\"\n",
     "            Start the above variable initialization\n",
     "        \"\"\"\n",
-    "        tf.initialize_all_variables().run()\n",
-    "        print(\"Variables initialized\")\n",
+    "        tf.global_variables_initializer().run()\n",
+    "        # v1: tf.initialize_all_variables().run()\n",
     "\n",
     "        for step in range(num_iterations):\n",
     "            \"\"\"\n",
@@ -1079,10 +1074,8 @@
     "            FEED_DICT = {TF_TRAIN_DATASET: BATCH_DATA, TF_TRAIN_LABELS: BATCH_LABELS}\n",
     "            _, l, predictions = session.run([OPTIMIZER, LOSS, TRAIN_PREDICTION], feed_dict=FEED_DICT)\n",
     "\n",
-    "            if (step == num_iterations - 1):\n",
-    "                acc=accuracy(TEST_PREDICTION.eval(), test_labels)\n",
-    "                print(\"Test accuracy: \", accuracy(TEST_PREDICTION.eval(), test_labels))\n",
-    "\n",
+    "        acc=accuracy(TEST_PREDICTION.eval(), test_labels)\n",
+    "        print(\"Test accuracy: \", accuracy(TEST_PREDICTION.eval(), test_labels))\n",
     "    return acc"
    ]
   },
@@ -1109,7 +1102,7 @@
     "num_iterations = 2000\n",
     "for i in TRAINING_SIZES:\n",
     "    print('Accuracy of Training Size of {} : '.format(i))\n",
-    "    accuracy_results=optimize(num_iterations,i)\n",
+    "    accuracy_results = optimize(num_iterations, i)\n",
     "print('------------------------------------------------------------------')"
    ]
   },
