--- a/src/lab_03_classification.ipynb
+++ b/src/lab_03_classification.ipynb
@@ -16,6 +16,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Before running this notebook, verify that you have all requirements by running this command in your terminal:\n",
+    "`pip install numpy pandas scipy sympy tensorflow matplotlib`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 1\n",
     "In this part, we will study classification based on the data available in the Matlab file `classification.mat` that you will under `lab-03-data/part1`.\n",
     "There are 3 data sets in this file, each one being a training set for a given class.\n",
