--- a/src/lab_02_object_description.ipynb
+++ b/src/lab_02_object_description.ipynb
@@ -16,6 +16,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Before running this notebook, verify that you have all requirements by running this command in your terminal:\n",
+    "`pip install numpy opencv-python matplotlib mlxtend scikit-learn scikit-image`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extract relevant data\n",
     "We first need to extract the `lab-02-data.tar.gz` archive.\n",
     "To this end, we use the [tarfile] module from the Python standard library.\n",
