--- a/src/lab_02_object_description.ipynb
+++ b/src/lab_02_object_description.ipynb
@@ -24,6 +24,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Be sure to have `wagner_fisher.py` file in the src directory\n",
+    "It can be find in the moodle assignement or following this [link][gist].\n",
+    "\n",
+    "[gist]: https://gist.github.com/kylebgorman/8034009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wagner_fisher as wf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extract relevant data\n",
     "We first need to extract the `lab-02-data.tar.gz` archive.\n",
     "To this end, we use the [tarfile] module from the Python standard library.\n",
