Final version for sven #Lab2

--- a/src/lab_02_object_description.ipynb
+++ b/src/lab_02_object_description.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "## Before running this notebook, verify that you have all requirements by running this command in your terminal:\n",
-    "`pip install numpy opencv-python matplotlib mlxtend scikit-learn scikit-image seaborn`"
+    "`python -m pip install numpy opencv-python matplotlib mlxtend scikit-learn scikit-image seaborn`"
    ]
   },
   {
@@ -379,6 +379,13 @@
     "plt.ylabel(\"Fourrier coefficient 2\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, we can completely classify the two classes with a region boundery "
    ]
   },
   {
@@ -750,10 +757,10 @@
     "    translation_mat = np.repeat(translation_vect, len(contour), axis=1)\n",
     "    translation_mat = translation_mat.transpose()\n",
     "    \n",
-    "    #addition\n",
+    "    # addition\n",
     "    translated_contours = np.add(contour, translation_mat)\n",
     "    \n",
-    "    #check if in bounds\n",
+    "    # check if in bounds\n",
     "    up_limit = 28\n",
     "    idx = np.where(translated_contours >= up_limit)\n",
     "    translated_contours = np.delete(translated_contours, idx[0], axis=0)\n",
@@ -778,11 +785,11 @@
     "    ox, oy = center\n",
     "    for i in range(contour.shape[0]):       \n",
     "        px, py = contour[i, :]\n",
-    "        #+0.5 is to take the closest integer when approximating\n",
+    "        # +0.5 is to take the closest integer when approximating\n",
     "        rotated_contours[i,0] = int(ox + math.cos(angle) * (px - ox) - math.sin(angle) * (py - oy) + 0.5)\n",
     "        rotated_contours[i,1] = int(oy + math.sin(angle) * (px - ox) + math.cos(angle) * (py - oy) + 0.5)\n",
     "\n",
-    "    #check if in bounds\n",
+    "    # check if in bounds\n",
     "    up_limit = 28\n",
     "    idx = np.where(rotated_contours >= up_limit)\n",
     "    rotated_contours = np.delete(rotated_contours, idx[0], axis=0)\n",
