--- a/src/lab_03_classification.ipynb
+++ b/src/lab_03_classification.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "## Before running this notebook, verify that you have all requirements by running this command in your terminal:\n",
-    "`pip install numpy pandas scipy sympy tensorflow matplotlib`"
+    "`python -m pip install numpy pandas scipy sympy tensorflow matplotlib`"
    ]
   },
   {
@@ -691,7 +691,7 @@
    "source": [
     "def multi_layer_perceptron(x, weights, biases):\n",
     "    \"\"\"\n",
-    "    MLP model with more than 2 hidden layers.\n",
+    "    MLP model with 2 hidden layers.\n",
     "    \"\"\"\n",
     "    hidden_layer1 = tf.add(tf.matmul(x, weights['w_h1']), biases['b_h1'])\n",
     "    hidden_layer1 = tf.nn.relu(hidden_layer1)   # apply ReLU non-linearity\n",
@@ -778,6 +778,9 @@
     "    \n",
     "    final_pred = tf.arg_max(model, 1)\n",
     "    prediction = final_pred.eval(session = sess, feed_dict = {x: test_images})\n",
+    "except:\n",
+    "    print('Error')\n",
+    "\n",
     "finally:\n",
     "    s.close()"
    ]
@@ -797,6 +800,13 @@
     "    ax.axis('off')\n",
     "    ax.set_title(\"Pred:{} (True:{})\".format(pred,lb))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
